--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Mario Andres Doncel Neto",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
